--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.4.1",
+    "axios": "^1.5.0",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-multiselect": "^3.0.0-beta.2",
