🧹 chore(package.json): add version, description, main archive and license

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "todo-front",
-  "version": "0.0.0",
+  "name": "2do4u-frontend-without-clean-architecture",
+  "version": "2.0.0",
+  "description": "Software criado para fins de pesquisa de TCC",
+  "main": "main.ts",
+  "license": "MIT",
   "private": true,
   "scripts": {
     "dev": "vite",
