--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "2do4u-frontend-without-clean-architecture",
-  "version": "2.0.0",
+  "version": "3.0.2",
   "description": "Software criado para fins de pesquisa de TCC",
   "main": "main.ts",
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "test:unit": "vitest",
